# AI-Agent-boot-dev

./: .gitignore  call_functions.py  config.py  main.py  prompts.py  pyproject.toml  stt.py  test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file.py  tts.py
calculator/: calculator_gui.py
functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_files.py
